20070707
 - (djm) API change: make all convenience functions return a pointer to
   the created object

20070705
 - (djm) Copyright year in all notices

20070419
 - (djm) Fix some warnings so I can turn off non-portable gcc warning
   flags

20070418
 - (djm) Move compat hacks into their own header, conditionalise
   compilation based on OS defines.
 - (djm) Implement xtemplate_free() + regress tests
 - (djm) Implement generic escaping of '{' characters, allowing any number of
   them to be escaped in one directive.
 - (djm) Rename xnamespace_* => mnamespace_*
 - (djm) Fix some memory leaks

20070417
 - (djm) Adapt xtemplate to libxobject's API change
 - (djm) Remove horrid casting: all public functions now work on struct
   xobject * alone, the other types are still used internally.
 - (djm) Start rename and merge of projects formally known as xobject and
   xtemplate into "libmtemplate". CVS repository files have been copied to
   preserve history
 - (djm) Rename xobject and co. to "mobject" (Google codesearch tells me that
   this is a pretty clean namespace)
 - (djm) Merge in and rename mtemplate (formerly xtemplate). Also done by
   CVS repsoitory copy and rename
 - (djm) Merge TODO, README and ChangeLog

20070416
 - (djm) Modify xtemplate generation routines to perform output using a
   callback function, so we can support different output modes. Rewrite
   stdio output mode using a callback.
 - (djm) Rename xtemplate_run to xtemplate_run_stdio ahead of support for
   new output styles
 - (djm) Add xtemplate_run_mbuf() to generate into a automatically
   allocated memory buffer
 - (djm) Add a xtemplate basic regression test
 - (djm) Fixed some invalid template syntax that was incorrectly being
   accepted, found by the nascent regress test :)

20070415
 - (djm) Add xdict_len() function and regress tests for it
 - (djm) Added some xarray_append_* helpers
 - (djm) Added xdict_replace_sn and xdict_insert_sn helpers
 - (djm) Add xint_add() function