@@ -1,6 +1,7 @@
 20070707
  - (djm) API change: make all convenience functions return a pointer to
    the created object
+ - (djm) Add comparison function mobject_cmp(a, b)
 
 20070705
  - (djm) Copyright year in all notices
